[NFF]docker config2